--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "tsc -w",
     "start": "node ./dist/index.js",
-    "dev": "ts-node-dev --respawn ./src/index.ts"
+    "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "@types/node": "^22.10.7",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3"
   }
 }
