--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "nest build",
     "watch": "tsc -w",
     "start": "node ./dist/index.js",
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register ./src/index.ts"
